syntax = "proto3";

package oxg.plugin_bus;

import "oxg/common.proto";

option go_package = "github.com/RowanDark/0xgen/proto/oxg;oxg";

// The PluginBus service provides a bi-directional stream for plugins to
// receive events from the host and send findings back.
service PluginBus {
  // EventStream is a long-lived, bi-directional stream between the host
  // (`0xgend`) and a single plugin.
  rpc EventStream(stream PluginEvent) returns (stream HostEvent);
  // GrantCapabilities issues a short-lived token binding a plugin to the
  // capabilities declared in its manifest.
  rpc GrantCapabilities(PluginCapabilityRequest) returns (PluginCapabilityGrant);
}

// PluginEvent is a message sent from a plugin to the host.
message PluginEvent {
  oneof event {
    // The first message sent by a plugin must be a `hello` message.
    PluginHello hello = 1;
    // After authentication, a plugin can send findings.
    oxg.common.Finding finding = 2;
  }
}

// PluginHello is the initial message a plugin sends to identify and
// authenticate itself.
message PluginHello {
  // A secret token to authenticate the plugin.
  string auth_token = 1;
  // The name of the plugin.
  string plugin_name = 2;
  // The process ID of the plugin instance.
  int32 pid = 3;
  // The list of event types the plugin wishes to subscribe to.
  // e.g., "flow.response", "flow.request"
  repeated string subscriptions = 4;
  // The list of capabilities the plugin requires.
  // e.g., "CAP_EMIT_FINDINGS"
  repeated string capabilities = 5;
  // Capability token issued by the host prior to runtime.
  string capability_token = 6;
}

// PluginCapabilityRequest captures the parameters required to mint a capability
// token for a plugin invocation.
message PluginCapabilityRequest {
  string auth_token = 1;
  string plugin_name = 2;
  repeated string capabilities = 3;
}

// PluginCapabilityGrant returns the issued token and expiry metadata.
message PluginCapabilityGrant {
  string capability_token = 1;
  int64 expires_at_unix = 2;
}

// HostEvent is a message sent from the host to a plugin.
message HostEvent {
  // The version of the 0xgend core that is sending the event.
  string core_version = 1;

  // For now, the only event is a flow event.
  oneof event {
    oxg.common.FlowEvent flow_event = 2;
  }
}
